--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am training to become a software developer in this Rutgers Bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Manalapan, NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gym, sports, TV, video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Developer at Google</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Manalapan, NJ.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Web Developers have a great work/life balance that strives on
+        their individual creativity and determination to learn more.
+      </p>
     </section>
 
     <footer id="footer">
